--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 app-two/logs/app-two.log.2018-10-16_0.gz
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
