--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ app-two/logs/app-two.log.2018-10-16_0.gz
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 .metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
+.metadata/.plugins/org.eclipse.core.resources/.history/1/c087d9fb28ca001814bcf5602106f03c
+.metadata/
+.recommenders/
+.sonarlint/
+app-two/logs/app-two/
