--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-app-two/logs/app-two.log.2018-10-16_0.gz
+.app-two/logs/app-two.log.2018-10-16_0.gz
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 .metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 .metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
@@ -7,6 +7,6 @@ app-two/logs/app-two.log.2018-10-16_0.gz
 .metadata/
 .recommenders/
 .sonarlint/
-app-two/logs/app-two/
+.app-two/logs/app-two/
 *.index
 *.snap
