--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,7 @@
-
-.app-two/logs/app-two.log.2018-10-16_0.gz
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
-.metadata/.plugins/org.eclipse.core.resources/.history/1/c087d9fb28ca001814bcf5602106f03c
-.metadata/
-.recommenders/
-.sonarlint/
-.logs/
-.app-two/logs/app-two/
+.metadata/*
+.recommenders/*
+.sonarlint/*
+logs/*
 *.index
 *.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/Servers/.syncinfo.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/zuul-proxy/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.projects/zuul-proxy/.syncinfo.snap
-.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
-.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
-.metadata/.plugins/org.eclipse.debug.ui/launchConfigurationHistory.xml
-.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/com.genuitec.eclipse.aeri.server1/server-config.json
-.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
-.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.jboss.tools/server-config.json
-.metadata/.plugins/org.eclipse.jdt.core/1573264569.index
-.metadata/.plugins/org.eclipse.jdt.core/71939880.index
-.metadata/.plugins/org.eclipse.jdt.core/externalLibsTimeStamps
+
