--- a/my-app/src/main/resources/application.yml
+++ b/my-app/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: my-app
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://zipkin:9411/ #container ip or container name in docker compose
     discoveryClientEnabled : false
     sender:
       type:  web
@@ -18,7 +18,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka #container ip or container name in docker compose
   instance:
     preferIpAddress: true
 logging:
