--- a/app-two/src/main/resources/application.yml
+++ b/app-two/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   application:
     name: app-two
   zipkin:
-    baseUrl: http://localhost:9411/
+    baseUrl: http://zipkin:9411/ #container ip or container name in docker compose
     discoveryClientEnabled : false
     sender:
       type:  web
@@ -27,7 +27,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultzone: http://localhost:8761/eureka/
+      defaultZone: http://eureka-server:8761/eureka #container ip or container name in docker compose
     fetchRegistry: true
   instance:
     preferIpAddress: true
@@ -40,9 +40,9 @@ logging:
   
 hibernate:
   datasource:
-    jdbc-url: jdbc:mysql://127.0.0.1:3306/microservices?zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false
+    jdbc-url: jdbc:mysql://db:3306/microservices?zeroDateTimeBehavior=convertToNull&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false
     user: root
-    password:
+    password: root
     driver-class: com.mysql.jdbc.Driver
     max-idle-time: 6
     min-pool-size: 3
