--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,17 @@
-.metadata/*
-.recommenders/*
-.sonarlint/*
-logs/*
-*.index
-*.snap
 
-*.gen
-*.container
-*.ini
-*.frq
-*.frq
-*metadata/*
-*metadata\*
+.metadata/.plugins/com.genuitec.eclipse.devstyle/recent.json
+.sonarlint/*
+.recommenders/*
+.metadata/*
+logs/*
 .metadata/.plugins/org.eclipse.core.resources/.history/1/c087d9fb28ca001814bcf5602106f03c
+.metadata/.plugins/org.eclipse.core.resources/.history/11/703ab2d31fca001814bcf5602106f03c
+.metadata/.plugins/org.eclipse.core.resources/.history/13/70f369f4d8cf00181951a13ca13c5f58
+.metadata/.plugins/org.eclipse.core.resources/.history/15/402d1dbad8cf00181951a13ca13c5f58
+.metadata/.plugins/org.eclipse.core.resources/.history/15/b011464baacc0018174c92ea936f4c64
+.metadata/.plugins/org.eclipse.core.resources/.history/18/105c9136abcc0018174c92ea936f4c64
+.metadata/.plugins/org.eclipse.core.resources/.history/1a/f005599e8ccd00181e089112b9986f99
+.metadata/.plugins/org.eclipse.core.resources/.history/27/00817dcdd8cf00181951a13ca13c5f58
+.metadata/.plugins/org.eclipse.core.resources/.history/2a/4090a5d31fca001814bcf5602106f03c
+.metadata/.plugins/org.eclipse.core.resources/.history/2b/70a76d18b0cc00181d22f75fc7652382
+.metadata/.plugins/org.eclipse.core.resources/.history/32/90ebb720d8cf00181951a13ca13c5f58
