--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,217 @@
 
-.metadata/.plugins/com.genuitec.eclipse.devstyle/recent.json
-.sonarlint/*
-.recommenders/*
-.metadata/*
-logs/*
-.metadata/.plugins/org.eclipse.core.resources/.history/1/c087d9fb28ca001814bcf5602106f03c
-.metadata/.plugins/org.eclipse.core.resources/.history/11/703ab2d31fca001814bcf5602106f03c
-.metadata/.plugins/org.eclipse.core.resources/.history/13/70f369f4d8cf00181951a13ca13c5f58
-.metadata/.plugins/org.eclipse.core.resources/.history/15/402d1dbad8cf00181951a13ca13c5f58
-.metadata/.plugins/org.eclipse.core.resources/.history/15/b011464baacc0018174c92ea936f4c64
-.metadata/.plugins/org.eclipse.core.resources/.history/18/105c9136abcc0018174c92ea936f4c64
-.metadata/.plugins/org.eclipse.core.resources/.history/1a/f005599e8ccd00181e089112b9986f99
-.metadata/.plugins/org.eclipse.core.resources/.history/27/00817dcdd8cf00181951a13ca13c5f58
-.metadata/.plugins/org.eclipse.core.resources/.history/2a/4090a5d31fca001814bcf5602106f03c
-.metadata/.plugins/org.eclipse.core.resources/.history/2b/70a76d18b0cc00181d22f75fc7652382
-.metadata/.plugins/org.eclipse.core.resources/.history/32/90ebb720d8cf00181951a13ca13c5f58
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kd.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kc_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kc.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kb_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kb.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_ka_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_ka.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/segments_y
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_z.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_y_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_y.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_x_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_x.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_w_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kd_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_ke.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_ke_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kf.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kf_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kg.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kg_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/_kh.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/38d31b1d40e5290c34d5391f1f9c74c4/segments_ii
+.metadata/.plugins/org.eclipse.m2e.core/nexus/830bc118332e77292949ed1e6d2fabe0/_1y.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/830bc118332e77292949ed1e6d2fabe0/segments_1t
+.metadata/.plugins/org.eclipse.pde.core/.local_targets/1540787724857.target
+.metadata/.plugins/org.eclipse.pde.core/.local_targets/1540796767830.target
+.metadata/.plugins/org.eclipse.ui.workbench.texteditor/dialog_settings.xml
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.fdt
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.fdx
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.fnm
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.frq
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.nrm
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.prx
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.tii
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/_5.tis
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_6
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/write.lock
+.sonarlint/default/.sonartmp_3787989570949930344/sonarlint-slf4j-sonar-log7667984979925569297.jar
+.sonarlint/default/.sonartmp_4971870687193081672/sonarlint-slf4j-sonar-log2146711180983116321.jar
+.sonarlint/modules/app-two/issues/b/8/b83a6f429aa6fd8b1ce768127c40f22cc61ddcce
+.sonarlint/modules/app-two/issues/8/b/8bd05798f7482deab5b52061cffbf58f6cecefdc
+.sonarlint/modules/app-two/issues/8/5/8557a0a3ceac2b76356a470819dc828b5ef4d1a0
+.sonarlint/modules/app-two/issues/6/8/6897eed51440fa6fe33a6fece3612922792d57b6
+.sonarlint/modules/app-two/issues/6/2/62c816c956125e44cfff9aaecdb512ea3c34d404
+.sonarlint/modules/app-two/issues/0/a/0a278c07649c7b14234c87d3d539f1a480e40ccd
+.sonarlint/default/.sonartmp_8724030456334472598/sonarlint-slf4j-sonar-log224305572942068864.jar
+.sonarlint/default/.sonartmp_8152379761379371804/sonarlint-slf4j-sonar-log3384793150416030672.jar
+.sonarlint/default/.sonartmp_556893855135575157/sonarlint-slf4j-sonar-log820031957474017795.jar
+.metadata/.plugins/org.eclipse.search/dialog_settings.xml
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_w.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_v_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_v.cfs
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_u_1.del
+.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/_u.cfs
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/zuul-proxy/2018/11/45/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/zuul-proxy/2018/11/45/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/11/45/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/11/45/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/10/44/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/10/44/refactorings.history
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/10/43/refactorings.index
+.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/app-two/2018/10/43/refactorings.history
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/9.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/8.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/7.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/6.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/5.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/4.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/3.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/2.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/10.png
+.metadata/.plugins/org.eclipse.jdt.ui/jdt-images/1.png
+.metadata/.plugins/org.eclipse.jdt.core/2415636542.index
+.metadata/.plugins/org.eclipse.equinox.p2.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.epp.mpc.ui/dialog_settings.xml
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.jboss.tools/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/com.genuitec.eclipse.aeri.server1/server-config.json
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.core.runtime/.settings/winterwell.markdown.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.sweetlemonade.eclipse.json.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.sourceforge.jsonedit-core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.scala-ide.sdt.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.scala-ide.play2.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.python.pydev.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.nodeclipse.enide.editors.jade.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.nodeclipse.enide.editors.gradle.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.jboss.ide.eclipse.freemarker.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.erlide.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.epic.perleditor.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.xtend.core.Xtend.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.wst.xml.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.wst.html.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.wst.css.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.cvs.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.search.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.recommenders.completion.rcp.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.php.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.pde.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.mylyn.wikitext.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.jst.jsp.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.epp.mpc.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.e4.ui.workbench.renderers.swt.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.e4.ui.css.swt.theme.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.e4.CSS.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.dltk.tcl.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.dltk.ruby.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.datatools.sqltools.sqleditor.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.cdt.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.cdt.make.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.cdt.dsf.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ant.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.angularjs.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.codehaus.groovy.eclipse.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.cloudsmith.geppetto.pp.dsl.PP.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.chromium.debug.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.cfeclipse.cfml.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.apache.ivyde.eclipse.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/net.vtst.ow.eclipse.less.Less.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/net.sourceforge.texlipse.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/net.sf.eclipsefp.haskell.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/jsonedit-core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/jp.gr.java_conf.ussiy.app.propedit.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/eclihx.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/de.walware.statet.r.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/de.walware.statet.base.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.wolfram.eclipse.MEET.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.spket.xml.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.spket.js.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.puppetlabs.geppetto.pp.dsl.PP.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.puppetlabs.geppetto.module.dsl.Module.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.powerflasher.fdt.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.palantir.typescript.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.googlecode.goclipse.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.google.eclipse.protobuf.Protobuf.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.github.rustdt.ide.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.github.eclipsecolortheme.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.genuitec.eclipse.theming.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.genuitec.eclipse.monitor.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.dubture.twig.ui.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.axmor.eclipse.typescript.editor.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.adobe.flexide.mxml.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.adobe.flexide.css.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/com.adobe.flexide.as.core.prefs
+.metadata/.plugins/org.eclipse.core.runtime/.settings/ccw.core.prefs
+.metadata/.plugins/org.eclipse.core.resources/14.snap
+.metadata/.plugins/org.eclipse.core.resources/.root/14.tree
+.metadata/.plugins/org.eclipse.core.resources/.history/fe/a07009f5baf000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/fd/a0b0659fdeef00181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/fb/7045627882da00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/f9/608f2b86deef00181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/f7/50284fd8c5f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/f5/c092f6e7c5f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/f2/b0cc1366e9d50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/ea/607500f9aff000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/e4/403ea52400dc00181088e11fac6bbeba
+.metadata/.plugins/org.eclipse.core.resources/.history/e3/500e8712e8d50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/df/50b874c53bdd00181b4f8f90969cb4d3
+.metadata/.plugins/org.eclipse.core.resources/.history/de/a02c8bc1e9d50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/dd/80bfbedf65db00181f7ae6c149bc80c0
+.metadata/.plugins/org.eclipse.core.resources/.history/cf/80134b8314ef00181455f713e520be42
+.metadata/.plugins/org.eclipse.core.resources/.history/c8/b09874f7e9d50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/c/2006155f9adb001812bd87c8b9dc838b
+.metadata/.plugins/org.eclipse.core.resources/.history/bc/b08fd8b7a5db001812bd87c8b9dc838b
+.metadata/.plugins/org.eclipse.core.resources/.history/bb/c0c6e5a786d400181dc4d41bd12712d2
+.metadata/.plugins/org.eclipse.core.resources/.history/bb/900246d1c5f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/ba/6013b485ddd50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/b8/a079e5d834db00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/b8/708b296d61db00181f7ae6c149bc80c0
+.metadata/.plugins/org.eclipse.core.resources/.history/b6/f0bc7ec9c5f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/b5/d024a6cda3db001812bd87c8b9dc838b
+.metadata/.plugins/org.eclipse.core.resources/.history/b5/80a78c6b65db00181f7ae6c149bc80c0
+.metadata/.plugins/org.eclipse.core.resources/.history/b4/0053e185baf000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/b1/10fddac833db00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/b/50e46e8214ef00181455f713e520be42
+.metadata/.plugins/org.eclipse.core.resources/.history/aa/404fff85deef00181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/a9/d0d5cdc5ddd50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/a7/30ee0366e9d50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/99/d0f318b935db00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/96/40ed5508c6f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/94/807b4a6ff4d900181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/93/10fd15b214ef00181455f713e520be42
+.metadata/.plugins/org.eclipse.core.resources/.history/90/20e986dcc6f000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/8f/20deb6ce3bdd00181b4f8f90969cb4d3
+.metadata/.plugins/org.eclipse.core.resources/.history/8a/d08eab0f9ddb001812bd87c8b9dc838b
+.metadata/.plugins/org.eclipse.core.resources/.history/83/909ea65b82da00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/81/d052e6f7aff000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/7c/c0e4042c3add00181b4f8f90969cb4d3
+.metadata/.plugins/org.eclipse.core.resources/.history/7a/8005258d86d400181dc4d41bd12712d2
+.metadata/.plugins/org.eclipse.core.resources/.history/78/004d5fd33add00181b4f8f90969cb4d3
+.metadata/.plugins/org.eclipse.core.resources/.history/76/9073d88addd50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/72/70170740baf000181881f92f6f32a549
+.metadata/.plugins/org.eclipse.core.resources/.history/71/e09eac5eddd50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/71/d0241fb214ef00181455f713e520be42
+.metadata/.plugins/org.eclipse.core.resources/.history/6c/e0ee9d7882da00181cf6d5ab60dce627
+.metadata/.plugins/org.eclipse.core.resources/.history/68/906e61d9ddd50018133698c1cf1aee91
+.metadata/.plugins/org.eclipse.core.resources/.history/6/40d2515765db00181f7ae6c149bc80c0
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/com.genuitec.eclipse.aeri.server1/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.jboss.tools/server-config.json
+.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/com.genuitec.eclipse.aeri.server1/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/server-config.json
+.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.jboss.tools/server-config.json
+logs/app-two.log.2018-11-23_0.gz
+logs/app-two.log.2018-11-24_0.gz
+logs/app-two.log.2018-11-25_0.gz
+logs/my-app.log.2018-11-23_0.gz
+logs/my-app.log.2018-11-24_0.gz
+logs/zuul.log.2018-11-23_0.gz
+logs/zuul.log.2018-11-24_0.gz
